--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "start": "next start"
   },
   "dependencies": {
-  	"@react-google-maps/api": "^2.20.7",
+    "@react-google-maps/api": "^2.20.7",
     "@tailwindcss/postcss": "^4.1.11",
     "chart.js": "^4.4.9",
     "chartjs-plugin-datalabels": "^2.2.0",
     "framer-motion": "^12.15.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.511.0",
     "next": "^15.3.5",
     "postcss": "^8.5.6",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/leaflet": "^1.9.20",
     "@types/node": "24.0.10",
     "@types/react": "19.1.8",
     "eslint": "^9.25.0",
